# bootcamp_jd_aula_18

./: README.md  exemplo01.py  exemplo02.py  pyproject.toml
src/: pokemon.db
