[tool.poetry]
name = "bootcamp-jd-aula-18"
version = "0.1.0"
description = ""
authors = ["pesati <pesatirevoredo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
